# zmsg

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  auth.rs  hex.rs  main.rs  rpc.rs  systemd.rs
test_files/: zcash.conf
