[package]
name = "zmsg"
version = "0.1.0"
authors = ["Pancy <pancy@firma.org>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "zmsg"

[dev-dependencies]
httpmock = "0.5"

[dependencies]
console = "0.14"
chrono = "0.4"
anyhow = "1.0"
structopt = "0.3"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"